envoy/sidecar-a/envoy.yaml
admin:
  access_log_path: "/tmp/admin_access.log"
  address: 
    socket_address: 
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: envoy-sidecar-a-http-listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8786
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: envoy-sidecar-a-route
            virtual_hosts:
            - name: envoy-sidecar-a-route
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cluster-app-for-sidecar-a
                  timeout: 180s
          http_filters:
          - name: envoy.router
            typed_config: {}
      tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: "/etc/localhost+4.pem"
              private_key:
                filename: "/etc/localhost+4-key.pem"
  clusters:
  - name: cluster-app-for-sidecar-a
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster-app-for-sidecar-a
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: cluster-app-for-sidecar-a
                port_value: 5002
